update styling splash page. decrease size of main image on small devices to ensure the bottom arrow is visible

--- a/client/login/css/agency.css
+++ b/client/login/css/agency.css
@@ -13,3 +13,9 @@ header {
 .modal-body {
   margin-top: -80px;
 }
+
+@media (max-width:770px) {
+  header {
+    height:90vh
+  }
+}
